# OpenPaw

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
commands/: chat.py  config_cmd.py  explain_cmd.py  history_cmd.py  models_cmd.py
config/: config_manager.py
prompts/: explain_prompt.py
tests/: test_api_client.py  test_config_manager.py  test_history_manager.py
utils/: api_client.py  console.py  file_reader.py  project_scanner.py
