[project]
name = "terminal-ai"
version = "0.1.0"
description = "A lightweight, modular, terminal-based AI coding assistant for OpenAI-compatible backends."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "openai>=1.30.0",
]

[project.scripts]
ai = "main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["commands*", "config*", "history*", "utils*", "cli*", "prompts*", "agents*", "models*"]
